# Hawa-ASMR

./: .releaserc  CHANGELOG.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vibin.code-workspace
.github/workflows/: build.yml
src/: app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/modules/: menu.rs  tauri_commands.rs
src/components/: GithubIcon.tsx  Greet.tsx  Player.tsx
src/components/RangeInput/: index.tsx  styles.css
src/components/Slider/: index.tsx  styles.css
src/pages/: main.tsx
src/routes/: Routes.tsx  index.tsx
src/static/: index.ts
src/static/enums/: index.ts
src/static/interfaces/: index.ts
src/store/context/app/: index.tsx
src/store/context/main/: index.tsx
src/store/context/notifications/: index.tsx
src/store/context/ui/: index.tsx
src/styles/: imports.css  index.css
src/utils/: index.ts
