[package]
name = "vibin"
version = "0.1.0"
description = "A desktop app for vibin"
authors = ["DaOfficialWizard"]
default-run = "vibin"
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
percent-encoding = "2.3.0"
tauri = { version = "1.5", features = [
    "os-all",
    "window-set-size",
    "window-set-decorations",
    "window-unmaximize",
    "window-request-user-attention",
    "process-exit",
    "window-maximize",
    "fs-all",
    "window-set-position",
    "process-relaunch",
    "window-show",
    "protocol-asset",
    "window-set-focus",
    "window-hide",
    "dialog-all",
    "window-unminimize",
    "window-set-fullscreen",
    "window-set-title",
    "window-center",
    "window-create",
    "window-start-dragging",
    "window-set-resizable",
    "window-minimize",
    "window-close",
    "notification-all",
    "path-all",
    "macos-private-api",
    "system-tray",
    "shell-open",
    "icon-ico",
    "system-tray",
] }
specta = { version = "2.0.0-rc.5", features = ["functions", "tauri"] }
tauri-specta = { version = "2.0.0-rc.2", features = [
    "javascript",
    "typescript",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whoami = "1.4.1"
sysinfo = "0.29.10"
sprintf = "0.1.3"
lazy_static = "1.4.0"
futures-util = "0.3.28"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/tauri-plugin-single-instance/"
branch = "dev"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tokio]
version = "1"
features = ["full"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri/updater"]

[build-dependencies.tauri-build]
version = "1.5"
features = []

# //* If we need to implement OS specific commands, we can use these
#[target.'cfg(target_os = "linux")'.dependencies]
#sd-desktop-linux = { path = "./crates/linux" }
#
#[target.'cfg(target_os = "macos")'.dependencies]
#sd-desktop-macos = { path = "./crates/macos" }
#
#[target.'cfg(target_os = "windows")'.dependencies]
#sd-desktop-windows = { path = "./crates/windows" }

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
